--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,18 @@
     --ring: 222.2 84% 4.9%;
 
     --radius: 0.5rem;
+
+    --nav-color: white;
+    --nav-text: #565b6e;
+    --primary-text: black;
+    --secondary-text: #333333;
+    --btn-background: black;
+    --btn-text: white;
+    --text-muted: #ececec;
+    --main-background: #f7f7f7;
+    --secondary-background: white;
+    --indicator: #ff0000;
+    --border-btm: #d9d9d9;
   }
 
   .dark {
@@ -64,6 +76,18 @@
     --border: 217.2 32.6% 17.5%;
     --input: 217.2 32.6% 17.5%;
     --ring: 212.7 26.8% 83.9%;
+
+    --nav-color: black;
+    --nav-text: white;
+    --primary-text: white;
+    --secondary-text: white;
+    --btn-background: white;
+    --btn-text: black;
+    --text-muted: #ececec;
+    --main-background: #2b2b2b;
+    --secondary-background: black;
+    --indicator: #ff0000;
+    --border-btm: #6f6f6f;
   }
 }
 
